<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="_0_degree">0 Degree</string>
</resources>