<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary80"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_converter"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/enterTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/enter_temperature"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="25sp"

        android:autofillHints="" />

    <Button
        android:id="@+id/cToF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/celsius_to_fahrenheit"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/fToC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit_to_celsius"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textAllCaps="false"

        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_degree"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        />

</LinearLayout>